# partition_id

./: .gitignore  README.md
.github/workflows/: rust.yml
dotnet/: partition_id.cs  partition_id.sln
rust/: Cargo.toml  README.md  test.sh
rust/src/: main.rs
