[package]
name = "partition_id"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Christian Geuer-Pollmann <geuerp@apache.org>"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
clap-stdin = "0.2.0"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
